Correctly aligned all elements

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,6 @@
 @import "components/progress_bar";
 @import "components/items";
 
-.center { 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+html, body, .smiggles-container {
+  height: 100%;
 }
