--- a/app/assets/stylesheets/components/items.scss
+++ b/app/assets/stylesheets/components/items.scss
@@ -1,5 +1,6 @@
 .item {
   position: absolute;
+  z-index: 2;
 }
 
 #food {
@@ -10,15 +11,15 @@
 }
 
 #drink {
-  top: 23%;
-  left: 28%;
+  top: 24%;
+  left: 26%;
   width: 40px;
   height: 40px;
 }
 
 #happiness {
-  top: 23%;
-  left: 28%;
+  top: 26%;
+  left: 24%;
   width: 40px;
   height: 40px;
 }
