--- a/app/assets/stylesheets/components/progress_bar.scss
+++ b/app/assets/stylesheets/components/progress_bar.scss
@@ -1,35 +1,24 @@
 .progress-gauge {
-  position: absolute;
+  position: relative;
+  margin: 0 auto;
 }
 
 #food-progress {
-  top: 65%;
-  left: 25%;
-  transform: translate(-65%, -25%);
   width: 80px;
   height: 80px;
 }
 
 #drink-progress {
-  top: 71%;
-  left: 81%;
-  transform: translate(-72%, -83%);
   width: 80px;
   height: 80px;
 }
 
 #happiness-progress {
-  top: 25%;
-  left: 55%;
-  transform: translate(-25%, -55%);
   width: 80px;
   height: 80px;
 }
 
 #life-progress {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 200px;
   height: 200px;
 }
