--- a/app/assets/stylesheets/smiggles.scss
+++ b/app/assets/stylesheets/smiggles.scss
@@ -1,3 +1,6 @@
 .face {
-  display: none; 
+  display: none;
+  position: absolute;
+  top: 28%;
+  left: 28%; 
 }
